--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,6 @@ build:
 requirements:
   build:
     - {{ compiler('c') }}
-    - {{ stdlib('c') }}
     - meson
     - pkg-config
     - ninja
@@ -32,7 +31,6 @@ outputs:
       - "lib/libGLdispatch.so.*"
     requirements:
       build:
-        - {{ stdlib('c') }}
     test:
       commands:
         # Shared libraries (change in any SOVER means we need to react on run-export)
@@ -47,8 +45,6 @@ outputs:
       run_exports:
         - {{ pin_subpackage('libglvnd', max_pin='x') }}
     requirements:
-      build:
-        - {{ stdlib('c') }}
       host:
         - {{ pin_subpackage('libglvnd', exact=True) }}
       run:
@@ -66,8 +62,6 @@ outputs:
     files:
       - "lib/libOpenGL.so.*"
     requirements:
-      build:
-        - {{ stdlib('c') }}
       host:
         - {{ pin_subpackage('libglvnd', exact=True) }}
       run:
@@ -85,8 +79,6 @@ outputs:
       run_exports:
         - {{ pin_subpackage('libopengl', max_pin='x') }}
     requirements:
-      build:
-        - {{ stdlib('c') }}
       host:
         - {{ pin_subpackage('libopengl', exact=True) }}
       run:
@@ -101,8 +93,6 @@ outputs:
     files:
       - "lib/libGLX.so.*"
     requirements:
-      build:
-        - {{ stdlib('c') }}
       host:
         - {{ pin_subpackage('libglvnd', exact=True) }}
         - xorg-libx11
@@ -126,8 +116,6 @@ outputs:
         # Only need the headers during development build
         - xorg-libxext
     requirements:
-      build:
-        - {{ stdlib('c') }}
       host:
         - {{ pin_subpackage('libglx', exact=True) }}
         - xorg-libx11
@@ -148,8 +136,6 @@ outputs:
     files:
       - "lib/libGL.so.*"
     requirements:
-      build:
-        - {{ stdlib('c') }}
       host:
         - {{ pin_subpackage('libglvnd', exact=True) }}
         - {{ pin_subpackage('libglx', exact=True) }}
@@ -173,8 +159,6 @@ outputs:
       run_exports:
         - {{ pin_subpackage('libgl', max_pin='x') }}
     requirements:
-      build:
-        - {{ stdlib('c') }}
       host:
         - {{ pin_subpackage('libgl', exact=True) }}
         - {{ pin_subpackage('libglx-devel', exact=True) }}
@@ -195,8 +179,6 @@ outputs:
     files:
       - "lib/libEGL.so.*"
     requirements:
-      build:
-        - {{ stdlib('c') }}
       host:
         - {{ pin_subpackage('libglvnd', exact=True) }}
       run:
@@ -219,8 +201,6 @@ outputs:
         - libgl-devel
         - xorg-libx11
     requirements:
-      build:
-        - {{ stdlib('c') }}
       host:
         - {{ pin_subpackage('libegl', exact=True) }}
         - {{ pin_subpackage('libgl-devel', exact=True) }}
@@ -243,8 +223,6 @@ outputs:
       - "lib/libGLESv1_CM.so.*"
       - "lib/libGLESv2.so.*"
     requirements:
-      build:
-        - {{ stdlib('c') }}
       host:
         - {{ pin_subpackage('libglvnd', exact=True) }}
       run:
@@ -272,8 +250,6 @@ outputs:
         - libegl-devel
         - libgl-devel
     requirements:
-      build:
-        - {{ stdlib('c') }}
       host:
         - {{ pin_subpackage('libgles', exact=True) }}
         - {{ pin_subpackage('libegl-devel', exact=True) }}
@@ -303,9 +279,17 @@ outputs:
 
 about:
   home: https://gitlab.freedesktop.org/glvnd/libglvnd
+  dev_url: https://gitlab.freedesktop.org/glvnd/libglvnd
+  doc_url: https://gitlab.freedesktop.org/glvnd/libglvnd
   license: LicenseRef-libglvnd
   license_file: README.md
   summary: GL Vendor-Neutral Dispatch library
+  description: |
+    libglvnd is a vendor-neutral dispatch layer for arbitrating OpenGL API calls
+    between multiple vendors. It allows multiple drivers from different vendors to
+    coexist on the same filesystem, and determines which vendor to dispatch each
+    API call to at runtime.
+    Both GLX and EGL are supported, in any combination with OpenGL and OpenGL ES.
 
 extra:
   feedstock-name: libglvnd
